--- a/src/css/home.css
+++ b/src/css/home.css
@@ -207,40 +207,85 @@
     width: 1300px;
     height: auto;
     margin-top: 43px;
-    display: grid;
-    gap: 30px;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.homepage .popular-dishes-frame .cards-frame .card {
-    margin-left: 30px;
+.homepage .popular-dishes-frame .cards-frame .avatar {
+    margin-left: 5%;
     min-height: 380px;
-    min-width: 270px;
+    min-width: 45%;
+    gap: 20px;
     cursor: pointer;
 }
 
-.homepage .popular-dishes-frame .cards-frame .card .card-cover {
-    background: linear-gradient(
-        to top,
-        rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0) 200px
-    ),
-    linear-gradient(
-        to top,
-        rgba(0, 0, 0, 0.8),
-        rgba(0, 0, 0, 0) 300px
-    ),
+.homepage .popular-dishes-frame .cards-frame .avatar .menu-card {
+  display: flex;
+  align-items: center;
+  grid: 20px;
+}
+ 
+.homepage .popular-dishes-frame .cards-frame .avatar .menu-card .menu-content {
+  width: 400px;
+  margin-left: 15px;
+  overflow: hidden;
+  justify-content: space-between;
+  position: relative;
 }
 
-.homepage .popular-dishes-frame .no-data {
+.homepage .popular-dishes-frame .cards-frame .avatar .menu-card .menu-content::after {
+  content: ".........................................................." "...................................................................." "....................................................................";
+  position: absolute;
+  left: 20px;
+  right: 0;
+  top: -4px;
+  z-index: 3;
+  color: color-mix(in srgb, #444444, transparent 60%);
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.homepage .popular-dishes-frame .cards-frame .avatar .menu-card .menu-content a {
+    color: #433f39;
+    width: fit-content;
+    height: auto;
+    background: #f8f8ff;
+    border-radius: 5px 5px 5px 5px;
+    padding-right: 10px;
+    position: relative;
+    display: grid;
+    z-index: 4;
+    font-weight: 700;
+    transition: 0.3s;
+}
+
+.homepage .popular-dishes-frame .cards-frame .avatar .menu-card .menu-content a:hover {
+    color: #ffb03b;
+}
+
+.homepage .popular-dishes-frame .cards-frame .avatar .menu-card .menu-content span {
+    font-style: italic;
+    font-size: 14px;
+    font-family: "Poppins",  sans-serif;
+    color: color-mix(in srgb, #444444, transparent 50%);
+}
+
+.homepage .popular-dishes-frame .cards-frame .avatar .menu-card .menu-ingredients {
+  top: -10px;
+  color: #ffb03b;
+  position: relative;
+  z-index: 3;
+  padding: 0 10px;
+  font-weight: 600;
+}
+
+.homepage .popular-dishes-frame .cards-frame .no-data {
     width: 100%;
-    height: 300px;
+    height: auto;
+    min-height: 300px;
     display: flex;
     position: relative;
-    left: 180%;
     justify-content: center;
-    align-items: end;
+    align-items: center;
     text-transform: capitalize;
     font-family: "Poppins";
     font-style: normal;
@@ -248,6 +293,11 @@
     font-size: 30px;
     line-height: 34px;
     color: #e3c08d;
+}
+
+.homepage .popular-dishes-frame .cards-frame .no-data .no-data-txt {
+    font-family: "Satisfy", sans-serif;
+    margin: 0 10px 0 10px;
 }
 
 /* NEW PRODUCTS */
