--- a/src/css/home.css
+++ b/src/css/home.css
@@ -231,6 +231,7 @@
   overflow: hidden;
   justify-content: space-between;
   position: relative;
+  cursor: pointer;
 }
 
 .homepage .popular-dishes-frame .cards-frame .avatar .menu-card .menu-content::after {
@@ -352,6 +353,7 @@
 
 .homepage .new-products-frame .main .cards-frame .details {
   text-align: center;
+  cursor: pointer;
 }
 
 .homepage .new-products-frame .main .cards-frame .details .detail {
@@ -449,20 +451,71 @@
 
 .homepage .ads-restaurant-frame {
     width: 100%;
-    height: 693px;
-    display: flex;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    min-width: 1300px;
     overflow: hidden;
     transform: perspective(0px);
     box-shadow: -3px 0px 20px 14px #34343480;
 }
 
-.homepage .ads-restaurant-frame .ads-video{
-    width: 100%;
-    background: #0c0e12;
-    display: flex;
-    box-shadow: 0px -8px 90px rgb(215, 215, 255);
-    transform: scale(1.5);
-    overflow: hidden;
+.homepage .ads-restaurant-frame .container {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 20px;
+}  
+
+.homepage .ads-restaurant-frame .container .category-button {
+    width: 100px;
+    font-size: 13px;
+    letter-spacing: 1px;
+    font-weight: 700;
+    padding: 8px 20px;
+    background-color: color-mix(in srgb, #ffb03b,  transparent 90%);
+    color: #ffb03b;
+    text-transform: uppercase;
+    border-radius: 50px;
+    font-family: Roboto;
+}
+
+.homepage .ads-restaurant-frame .container .category-title {
+    color: #433f39;
+    margin: 10px 0 0 0;
+    font-size: 32px;
+    font-weight: 700;
+    font-family: "Satisfy", sans-serif;
+}
+
+.homepage .ads-restaurant-frame .container .category-title span {
+  color: #ffb03b;
+}  
+
+.homepage .ads-restaurant-frame .box {
+  width: 100%;
+  display: ruby;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+}  
+
+.homepage .ads-restaurant-frame .box .gallery-item {
+  width: 454px;
+  height: 283px;
+  margin: 20px 5px 20px 5px;
+  overflow: hidden;
+  border-radius: 3px solid  #ffffff;
+  border-bottom: 3px solid #ffffff;
+}
+
+.homepage .ads-restaurant-frame .box .gallery-item img {
+  transition: all ease-in-out 0.4s;
+  border-radius: 15px 0 15px 0;
+}
+
+.homepage .ads-restaurant-frame .box .gallery-item:hover img {
+  transform: scale(1.1);
 }
 
 /* ACTIVE USERS */
