--- a/src/css/home.css
+++ b/src/css/home.css
@@ -676,7 +676,7 @@
 }
 
 /** EVENTS **/
-
+/* 
 .homepage .events-frame {
     width: 100%;
     height: 745px;
@@ -861,5 +861,5 @@
   .homepage .events-frame .swiper-pagination-bullet-active {
     background: #343434;
     border-radius: 50%;
-  }
+  } */
   
