--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,10 +1,15 @@
 .home-navbar {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    background: url('/public/img/banner.jpg');
-    background-size: cover;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+
+  background-image: url('/public/img/banner-4.jpg');
+  background-color: rgba(52, 52, 51, 0.5);
+  background-blend-mode: overlay;
+  background-size: cover;
+  background-position: center;
 }
+
 
 .home-navbar .navbar-container {
     margin-top: 55px;
